--- a/.github/workflows/main_paymentsystemfunction.yml
+++ b/.github/workflows/main_paymentsystemfunction.yml
@@ -37,8 +37,8 @@ jobs:
         shell: bash
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          dotnet restore './functionsapp/Eventgridfuntionapp.csproj'  # Herstelt de afhankelijkheden van het juiste projectbestand
-          dotnet build './functionsapp/Eventgridfuntionapp.csproj' --configuration Release --output ./output  # Bouw het project
+          dotnet restore './Eventgridfuntionapp.csproj'  # Herstelt de afhankelijkheden van het juiste projectbestand
+          dotnet build './Eventgridfuntionapp.csproj' --configuration Release --output ./output  # Bouw het project
           popd
       
       # Stap 5: Login naar Azure met behulp van de Azure-login actie
