--- a/.github/workflows/main_paymentsystemfunction.yml
+++ b/.github/workflows/main_paymentsystemfunction.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'  # De rootmap van je project
-  DOTNET_VERSION: '3.1.x'  # Specificeer de juiste .NET versie (3.1.x voor .NET Core 3.1)
+  DOTNET_VERSION: '3.1'  # Specificeer de juiste .NET versie (3.1.x voor .NET Core 3.1)
 
 jobs:
   build-and-deploy:
@@ -26,11 +26,6 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
-
-      # Stap 3: Installeer de benodigde Microsoft.NET.Sdk.Functions
-      - name: Install Microsoft.NET.Sdk.Functions
-        run: |
-          dotnet new --install Microsoft.NET.Sdk.Functions::3.0.11
 
       # Stap 4: Bouw het project
       - name: Resolve Project Dependencies Using Dotnet
