--- a/.github/workflows/main_paymentsystemfunction.yml
+++ b/.github/workflows/main_paymentsystemfunction.yml
@@ -26,7 +26,9 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
-
+      - name: Check .NET Version
+        run: dotnet --version
+        
       # Stap 4: Bouw het project
       - name: Resolve Project Dependencies Using Dotnet
         shell: bash
