--- a/Eventgridfuntionapp.csproj
+++ b/Eventgridfuntionapp.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.EventGrid" Version="3.0.0" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <!-- <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" /> -->
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
   </ItemGroup>
 
