--- a/.github/workflows/main_paymentsystemfunction.yml
+++ b/.github/workflows/main_paymentsystemfunction.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'  # De rootmap van je project
-  DOTNET_VERSION: '8.0.x'  # Specificeer de juiste .NET versie (3.1.x voor .NET Core 3.1)
+  DOTNET_VERSION: '8.0.404'  # Specificeer de juiste .NET versie (3.1.x voor .NET Core 3.1)
 
 jobs:
   build-and-deploy:
