--- a/.github/workflows/main_paymentsystemfunction.yml
+++ b/.github/workflows/main_paymentsystemfunction.yml
@@ -36,9 +36,9 @@ jobs:
       - name: Resolve Project Dependencies Using Dotnet
         shell: bash
         run: |
-
-          dotnet restore './Eventgridfuntionapp.csproj'  # Herstelt de afhankelijkheden van het juiste projectbestand
-          dotnet build './Eventgridfuntionapp.csproj' --configuration Release --output ./output  # Bouw het project
+          pushd './functionsapp'  
+          dotnet restore './Eventgridfuntionapp.csproj' 
+          dotnet build './Eventgridfuntionapp.csproj' --configuration Release --output ./output
           popd
       
       # Stap 5: Login naar Azure met behulp van de Azure-login actie
