--- a/.github/workflows/main_paymentsystemfunction.yml
+++ b/.github/workflows/main_paymentsystemfunction.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Check .NET Version
         run: dotnet --version
 
+      - name: Install Azure Functions Workload
+        run: dotnet workload install microsoft-net-sdk-functions
+
 
       # Stap 4: Bouw het project
       - name: Resolve Project Dependencies Using Dotnet
