--- a/.github/workflows/main_paymentsystemfunction.yml
+++ b/.github/workflows/main_paymentsystemfunction.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Checkout GitHub Action
         uses: actions/checkout@v4
 
-
+      - name: Install Azure Functions workload
+        run: dotnet workload install azure-functions
 
       # Stap 2: Setup de juiste .NET SDK versie (3.1)
       - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
