--- a/.github/workflows/main_functionapp-joep.yml
+++ b/.github/workflows/main_functionapp-joep.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-
-          pip install -r ../requirements.txt
+          cd functionsapp
+          pip install -r /requirements.txt
 
 
 
