--- a/.github/workflows/main_functionapp-joep.yml
+++ b/.github/workflows/main_functionapp-joep.yml
@@ -23,7 +23,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-        
           pip install -r ./requirements.txt
 
 
@@ -64,6 +63,10 @@ jobs:
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
-          app-name: 'functionapp-joep'
+          app-name: 'Paymentsystem'
           slot-name: 'Production'
           package: Paymentprocessor
+          scm-do-build-during-deployment: true   
+          enable-oryx-build: true             
+          sku: flexconsumption                  
+          remote-build: true                  
