bestand kleiner maken

--- a/.github/workflows/main_functionapp-joep.yml
+++ b/.github/workflows/main_functionapp-joep.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd Paymentprocessor
-          pip install -r ./requirements.txt
+          pip install --no-cache-dir -r ./requirements.txt
 
 
 
