--- a/.github/workflows/main_functionapp-joep.yml
+++ b/.github/workflows/main_functionapp-joep.yml
@@ -69,5 +69,5 @@ jobs:
           package: Paymentprocessor
           scm-do-build-during-deployment: true   
           enable-oryx-build: true             
-          sku: flexconsumption                  
+          sku: consumption                  
           remote-build: true                  
