--- a/.github/workflows/main_functionapp.yml
+++ b/.github/workflows/main_functionapp.yml
@@ -65,9 +65,9 @@ jobs:
         uses: Azure/functions-action@v1
         with:
           app-name: 'Paymentsystem'
-          slot-name: 'Production'
+          slot-name: 'test'
           package: Paymentprocessor
-          scm-do-build-during-deployment: true   
+          scm-do-build-during-deployment: false   
           enable-oryx-build: true             
           sku: consumption                  
-          remote-build: true                  
+          remote-build: true                 
