--- a/.github/workflows/main_paymentsystem.yml
+++ b/.github/workflows/main_paymentsystem.yml
@@ -65,7 +65,7 @@ jobs:
         uses: Azure/functions-action@v1
         with:
           app-name: 'Paymentsystem'
-          slot-name: 'test'
+          slot-name: 'Production'
           package: Paymentprocessor
           scm-do-build-during-deployment: false   
           enable-oryx-build: true             
