--- a/.github/workflows/main_paymentsystem.yml
+++ b/.github/workflows/main_paymentsystem.yml
@@ -68,6 +68,6 @@ jobs:
           slot-name: 'Production'
           package: Paymentprocessor
           scm-do-build-during-deployment: false   
-          enable-oryx-build: true             
+          enable-oryx-build: false            
           sku: consumption                  
           remote-build: true                 
